  - shim layer data block
  - metadata property store data block
  - shell item identifiers list data block
* remaining known folder identifiers in test set

Library
* create API functions to access link information values
* add libfvalue

API
* add functions
  - for icon location block ?
  - for special and/or known folder identifier
* remove liblnk_file_get_link_target_identifier_data

20160109
* fixes for rpmbuild

20160107
* worked on Python 3 support
* 2016 update

20151229
* worked on setup.py

20151222
* applied updates

20151205
* worked on Python bindings

20150830
* worked on Python 3 support
  - added support for distributed link tracker functions

20150726
* worked on tests

20150725
* worked on setup.py

20150617
* bug fixes after fuzzing with AFL

20150616
* bug fixes after fuzzing with AFL

20150609
* Bug fix for handling volume label

20150105
* 2015 update

20141222
* worked on Python 3 support

20141220
* worked on Python 3 support
* worked on tests

20141218
* worked on Python 3 support

20141216
* worked on Python 3 support

20141130
* code clean up

20141117
* code clean up

20141111
* code clean up

20141026
* changes for deployment

20141019
* changes for deployment

20141013
* worked on utility scripts

20141004
* update Python-bindings tests

20140921
* changes for project site move

20140905
* updated libfwsi version check

20140831
* bug fix in Python-bindings

20140807
* worked on property store data block support

20140731
* bug fix in Python-bindings

20140730
* worked on shell items support
* small changes in debug output

20140729
* small changes in lnkinfo output

20140723
* worked on dpkg debug packages support

20140715
* worked on dpkg debug packages support

20140714
* worked on shell items support

20140622
* updated dependencies

20140323
* worked on Python bindings

20140112
* worked on updates

20140107
* 2014 update
* updated dependencies
* worked on Python bindings